optimize BedrockMinerCompact and make tasks parallelizable limited to bedrokminer config.limitmax